--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body  onload="loadList()">
 
 <div class="container">
     <table class="table table-striped text-center align-middle">
@@ -62,24 +62,24 @@
         </tr>
 
 
-        <tr id="modify_line" class="d-none w-25">
+        <tr id="modify_line" class="d-none w-50 ">
+            <td id="index_mod">
+
+            </td>
+
             <td><label>
-                <input style="width: 50px" id="kg_price_mod" type="text" placeholder="Price per Kg"/>
+                <input style="width: 70px" id="kg_price_mod" type="number" placeholder="Price per Kg" class="text-center" step="0.1"/>
             </label></td>
 
             <td><label>
-                <input style="width: 150px" id="name_mod" type="text" placeholder="Name" disabled/>
-            </label></td>
-
-            <td><label>
-                <input style="width: 50px" id="delivered_mod" type="text" placeholder="Price per Kg"/>
+                <input class="text-center" style="width: 150px" id="name_mod" type="text" placeholder="Name" />
             </label></td>
 
             <td></td>
 
-            <td><label>
-                <input style="width: 50px" id="rest_mod" type="text" placeholder="Rest"/>
-            </label></td>
+            <td></td>
+
+            <td></td>
 
             <td></td>
 
@@ -87,7 +87,7 @@
             <td></td>
 
             <td>
-                <button id="btn_mod" class="btn btn-light">
+                <button id="btn_mod" class="btn btn-light" onclick="modify_line()">
                     <img src="src/pencil.svg" alt="pencil full"/>
                 </button>
             </td>
